--- a/TAO/ChangeLog
+++ b/TAO/ChangeLog
@@ -113,6 +113,9 @@ Tue Sep 15 21:49:33 2004  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* tao/PortableServer/ServerRequestInfo.h:
 
+	  Made pointer to Servant_Upcall object const.  It's value should
+	  never change.
+
 Tue Sep 14 06:27:15 2004  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* docs/compiler.html:
