2007-07-06    <wotte@localhost.localdomain>
git-svn-id: svn://svn.dre.vanderbilt.edu/DOC/Middleware/branches/RACE_devl@78816 ae88bc3d-4319-0410-8dbf-d08b4c9d3795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-07-06    <wotte@localhost.localdomain>
+
+	* SA_POP/SA_POP.mpc:
+	* SA_POP/SANet/XML_SANet.hpp:
+	* SA_POP/SANet/XML_SANet.cpp:
+
+	  Added an additional schema from previous commit.
+	
 2007-07-05    <wotte@localhost.localdomain>
 
 	* SA_POP/XML_TaskMap.cpp:
